restructuring project to reduce coupling of the code

--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -1,6 +1,7 @@
 with-expecter: true
-inpackage: true
-dir: ./
+inpackage: false
+dir: ./mocks
+outpkg: mocks
 mock-build-tags: "!compile"
 packages:
   github.com/ksysoev/wasabi:
