--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Setup Go 1.21
         uses: actions/setup-go@v3
         with:
-          go-version: '1.21.x'
+          go-version: "1.21.x"
       - name: Display Go version
         run: go version
       - name: Code Lint
@@ -21,6 +21,10 @@ jobs:
         run: go build -v ./...
       - name: Test
         run: go test -coverprofile=coverage.out -covermode=atomic -v -race ./...
+      - name: Prepare coverage reports
+        run: |
+          cat coverage.out | grep -v "/wasabi/mocks/" | grep -v "/wasabi/examples" > coverage.final.out
+          mv coverage.final.out coverage.out
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
