--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,15 @@ on: [push]
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: ["1.20.x", "1.21.x", "1.22.x"]
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Go 1.21
+      - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v3
         with:
-          go-version: "1.21.x"
+          go-version: ${{ matrix.go-version }}
       - name: Display Go version
         run: go version
       - name: Code Lint
