--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Display Go version
         run: go version
-      - name: Code Lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: v1.55.2
+      # - name: Code Lint
+      #   uses: golangci/golangci-lint-action@v3
+      #   with:
+      #     version: v1.55.2
       - name: Build
         run: go build -v ./...
       - name: Test
