--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,10 @@ jobs:
       - name: Display Go version
         run: go version
       - name: Code Lint
-        rules:
-          - if: $CI_COMMIT_MESSAGE =~ /^lint-skip/
-            when: never
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55.2
+        if: "!contains(github.event.head_commit.message, 'lint-skip')"
       - name: Build
         run: go build -v ./...
       - name: Test
