--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55.2
-        if: "!contains(github.event.head_commit.message, 'lint-skip')"
+        if: ${{!contains(github.event.head_commit.message, 'lint-skip')}}
       - name: Build
         run: go build -v ./...
       - name: Test
