--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Display Go version
         run: go version
       - name: Code Lint
-        if: ${{!contains(github.event.head_commit.message, 'lint-skip')}}
+        if: "!contains(github.event.head_commit.message, 'lint-skip')"
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55.2
