--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,4 +1,13 @@
 linters-settings:
+  revive:
+    rules:
+      # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#exported
+      - name: exported
+        severity: warning
+        disabled: false
+        exclude: [""]
+        arguments:
+          - "disableStutteringCheck"
   exhaustive:
     default-signifies-exhaustive: true
   errcheck:
@@ -22,16 +31,6 @@ linters-settings:
     require-specific: true
 
 linters:
-  linters-settings:
-  revive:
-    rules:
-      # https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#exported
-      - name: exported
-        severity: error
-        disabled: false
-        exclude: [""]
-        arguments:
-          - "disableStutteringCheck"
   disable-all: true
   enable:
     - bodyclose
