--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55.2
+          args: --out-format=colored-line-number
       - name: Build
         run: go build -v ./...
       - name: Test
