--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Code Lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.64.8s
+          version: v1.64.8
       - name: Build
         run: go build -v ./...
       - name: Test
